--- a/index.html
+++ b/index.html
@@ -5,24 +5,8 @@
     <title>Master Key</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
-<!--
-  El CSS que no sea de boostrap, lo ponemos dentro de los tag <style></style> en 
-  cada archivo html
--->    
-    <style>
-      h1{
-        font-family: 'Bubbler One', sans-serif;
-        color: black;
-      }
-      @media (min-width: 370px){
-        .col-sm-2{padding-right: 0;}      
-        .input-group[class*=col-]{
-        padding-left: 70%;
-        width: auto;
-        }
-      }
-    </style>
   </head>
    <body>
    <br>
