--- a/agregar.html
+++ b/agregar.html
@@ -28,15 +28,15 @@
       <form id="sendDatos">
        <div class="form-group">
             <label>Usuario:</label>
-            <input class="form-control" id="usuario" type="text">
+            <input class="form-control" id="usuario" type="text" required>
         </div>
         <div class="form-group">
             <label>Sitio:</label>
-            <input class="form-control" id="sitio" type="text" placeholder="https://">
+            <input class="form-control" id="sitio" type="text" placeholder="https://" required>
         </div>        
         <div class="form-group">
           <label>Contraseña:</label>
-          <textarea class="form-control" id="contraseña" placeholder="******"></textarea>
+          <input type="text" class="form-control" id="contraseña" required>
         </div>        
     <br>  
     <div id="p-btn">
