--- a/agregar.html
+++ b/agregar.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <br>
-    <div class="container">
+    <div id="masterk">
+      <div class="container">
       <header>
         <nav class="navbar navbar-default navbar-fixed">
            <div class="container-fluid">
@@ -45,6 +46,7 @@
       </p> 
     </div> 
     </form>
+    </div>
     </div>    
     <br>
     <br>
