--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <body>
    <br>
    <br>
+   <div id="masterk-log">
    <center>
     <div class="container-fluid">
         <div>
@@ -22,33 +23,31 @@
       <header>
              <h1>MASTER KEY</h1>
     </header>
-       </center>
+  </center>
+  
     <div class="container">
+    <br>
     <br>
     <form action="">
        <div class="form-group">
             <label for="usuario">Usuario:</label>
-            <input class="form-control" id="usuario" type="text">
+            <input class="form-control" id="usuario" type="text" autocomplete="on">
        </div>
        <div class="form-group">
             <label for="contraseña">Contraseña:</label>
-            <input class="form-control" id="sontraseña" type="text">
+            <input class="form-control" id="contraseña" type="text">
        </div>
-    </form>
-    <br>
-    <section class="main">
-        <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
-        <button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button>
-    </section>
-    <br>
-    <form action="">
        <div class="form-group">
-            <label for="usuario">Verificar contraseña: </label>
-            <input class="form-control" id="usuario" type="text">
+            <label for="contraseña1">Verificar contraseña: </label>
+            <input class="form-control" id="contraseña1" type="text">
         </div>
     </form>
+    <br>
+        <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
+        <button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button>
     </div>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-   </body>
+  </div>  
+  <script src="js/jquery.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
