--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="container">
     <br>
     <br>
+    <br>
     <form action="">
        <div class="form-group">
             <label for="usuario">Usuario:</label>
@@ -35,13 +36,11 @@
        </div>
        <div class="form-group">
             <label for="contraseña">Contraseña:</label>
-            <input class="form-control" id="contraseña" type="text">
+            <input class="form-control" id="contraseña" type="password">
        </div>
-       <div class="form-group">
-            <label for="contraseña1">Verificar contraseña: </label>
-            <input class="form-control" id="contraseña1" type="text">
-        </div>
     </form>
+    <br>
+    <br>
     <br>
         <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
         <button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button>
