--- a/concentrado.html
+++ b/concentrado.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">     
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
-    <script src="js/webSQL.js"></script>
     <script src="js/key-gen.js"></script>
+    <script src="js/webSQL.js"></script>    
     <script src="js/jQuery.js"></script>     
   </head>
   <body>
@@ -18,7 +18,7 @@
         <div class="navbar-header">
         <a href="concentrado.html" class="navbar-brand">MASTER KEY</a>
           <div class="input-group col-sm-2">
-            <input type="text" class="form-control" id="search" placeholder="buscar:" onkeyup="buscar()">
+            <input type="text" class="form-control" id="search" placeholder="Buscar" onkeyup="buscar()">
             <span class="input-group-btn">
               <button class="btn btn-default" type="button">
                 <span class="glyphicon glyphicon-search"></span>
@@ -35,28 +35,26 @@
           <tr class="active">
             <th>Sitio</th>
             <th>Usuario</th>
-            <th>Contraseña</th>
-            <th></th>
+            <th class="td-p">Contraseña</th>
+            <th class="td-w"></th>
           </tr>            
           <script type="text/javascript">
             read();        
-            setInterval(function(){ timeout() }, 30000);
+            setInterval(function(){ timeout() }, 300000);
           </script>
-        </table>        
+        </table>
+       </form>         
       </div>
     </div>
     <div class="container">
       <footer>
-        <div id="p-btn">
-          <p>
-           <button onclick="s()" type"submit" class="btn btn-danger col-xs-3 col-sm-3 col-md-3 col-md-2"><span class="glyphicon glyphicon-trash"></span></button>
-      </form>     
-           <a href="agregar.html"><button class="btn btn-primary btn-md col-xs-3 col-sm-3 col-md-3 col-md-2"><span class="glyphicon glyphicon-plus"></span></button></a>        
+        <div id="btn-A">
+          <p>          
+           <a href="agregar.html"><button class="btn btn-primary col-xs-3 col-sm-3 col-md-3 col-md-2"><span class="glyphicon glyphicon-plus"></span></button></a>        
           </p> 
         </div>        
       </footer>
     </div>
-    <button class="btn" onclick="clean()" type"submit"></span>Clear-DB</button></a>
     <script src="js/bootstrap.min.js"></script>    
   </body>
 </html>
