--- a/agregar.html
+++ b/agregar.html
@@ -47,7 +47,8 @@
     </div> 
     </form>
     </div>
-    </div>    
+    </div> 
+    <a href="concentrado.html"><button class="btn btn-default col-xs-3 col-sm-3 col-md-3 col-lg-3"><span class="glyphicon glyphicon-floppy-disk"></span></button></a>   
     <br>
     <br>
     <script src="js/webSQL.js"></script>
