--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
    <div id="masterk-log">
    <center>
     <div class="container-fluid">
-        <div>
-            <div class="col-lg-12">
-                <img src="MK_Logo.jpg" class="img-responsive">
-            </div>
-        </div>
+        <img src="css/MK.png" class="img-responsive">
     </div>
       <header>
              <h1>MASTER KEY</h1>
@@ -41,9 +37,8 @@
     </form>
     <br>
     <br>
-    <br>
         <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
-        <button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button>
+        <a href="sing_up.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button></div></a>
     </div>
   </div>  
   <script src="js/jquery.js"></script>
