--- a/agregar.html
+++ b/agregar.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/key-gen.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
-         
+    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">         
   </head>
   <body>
     <br>
     <div id="masterk">
-      <div class="container">
+      <div class="container">      
       <header>
         <nav class="navbar navbar-default navbar-fixed">
            <div class="container-fluid">
               <div class="navbar-header">
-                <a href="concentrado.html" class="navbar-brand">MASTER KEY</a>
+                <a href="concentrado.html" class="navbar-brand"><button class="btn btn-default btn-C col-sm-3 col-sm-3 col-sm-3 col-sm-3"><span class="glyphicon glyphicon-arrow-left"></span></button>MASTER KEY</a>     
               </div>
            </div>
         </nav>
@@ -47,8 +46,7 @@
     </div> 
     </form>
     </div>
-    </div> 
-    <a href="concentrado.html"><button class="btn btn-default col-xs-3 col-sm-3 col-md-3 col-lg-3"><span class="glyphicon glyphicon-floppy-disk"></span></button></a>   
+    </div>   
     <br>
     <br>
     <script src="js/webSQL.js"></script>
