--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div>
             <div class="col-lg-12">
-                <img src="MK_Logo.jpg" class="img-responsive">
+                <img src="css/M1.jpg" class="img-responsive">
             </div>
         </div>
     </div>
