--- a/index.html
+++ b/index.html
@@ -7,43 +7,74 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
+    <!-- Auth0 Lock script -->
+    <script src="https://cdn.auth0.com/js/lock/10.16/lock.min.js"></script>
+
+
   </head>
-   <body>
-   <br>
-   <br>
-   <div id="masterk-log">
-   <center>
-    <div class="container-fluid">
-        <div>
-            <div class="col-lg-12">
-                <img src="MK_Logo.jpg" class="img-responsive">
-            </div>
+
+  <body>
+    <script src="https://cdn.auth0.com/js/auth0/8.7/auth0.min.js"></script>
+
+    <div id="loading">
+    <img src="assets/loading.svg" alt="Loading spinner">
+  </div>
+
+  <div class="content">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Auth0 - JavaScript</a>
+
+          <button id="btn-home-view" class="btn btn-primary btn-margin">
+              Home
+          </button>
+
+          <button id="btn-login" class="btn btn-primary btn-margin">
+              Log In
+          </button>
+
+          <button id="btn-logout" class="btn btn-primary btn-margin">
+              Log Out
+          </button>
+
         </div>
-    </div>
-      <header>
-             <h1>MASTER KEY</h1>
-    </header>
-  </center>
-  
+      </div>
+    </nav>
+
+    <main class="container">
+      <!-- home view -->
+      <div id="home-view">
+        <h4></h4>
+      </div>
+      
+    </main>
+
+  </div>
+
+  <script src="node_modules/auth0-js/build/auth0.js"></script>
+  <script src="js/auth0-variables.js"></script>
+  <script src="js/app.js"></script>
+
     <div class="container">
-    <br>
-    <br>
-    <br>
-    <form action="">
-       <div class="form-group">
-            <label for="usuario">Usuario:</label>
-            <input class="form-control" id="usuario" type="text" autocomplete="on">
-       </div>
-       <div class="form-group">
-            <label for="contraseña">Contraseña:</label>
-            <input class="form-control" id="contraseña" type="password">
-       </div>
-    </form>
-    <br>
-    <br>
-    <br>
-        <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
-        <button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button>
+      <br>
+      <br>
+      <br>
+      <form action="">
+         <div class="form-group">
+              <label for="usuario">Usuario:</label>
+              <input class="form-control" id="usuario" type="text" autocomplete="on">
+         </div>
+         <div class="form-group">
+              <label for="contraseña">Contraseña:</label>
+              <input class="form-control" id="contraseña" type="password">
+         </div>
+      </form>
+      <br>
+      <br>
+      <br>
+          <a href="concentrado.html"><button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5">Iniciar sesion</button></a>
+          <button class="btn btn-primary col-xs-5 col-sm-5 col-md-5 col-lg-5 col-md-offset-2 col-lg-offset-2 col-xs-offset-2 col-sm-offset-2">Registrarse</button>
     </div>
   </div>  
   <script src="js/jquery.js"></script>
