--- a/agregar.html
+++ b/agregar.html
@@ -14,18 +14,16 @@
     <div id="masterk">
       <div class="container">      
       <header>
-        <nav class="navbar navbar-default navbar-fixed">
-           <div class="container-fluid">
+        <nav class="navbar navbar-fixed">
               <div class="navbar-header">
                 <a href="concentrado.html" class="navbar-brand"><button class="btn btn-default btn-C col-sm-3 col-sm-3 col-sm-3 col-sm-3"><span class="glyphicon glyphicon-arrow-left"></span></button>MASTER KEY</a>     
               </div>
-           </div>
         </nav>
       </header>
     </div>
      <div class="container">
       <form id="sendDatos">
-       <div class="form-group">
+        <div class="form-group">
             <label>Usuario:</label>
             <input class="form-control" id="usuario" type="text" required>
         </div>
@@ -38,15 +36,13 @@
             generar(12);
           </script>
         </div>        
-    <br>  
-    <div id="btn-A">
-      <p>        
-        <button onclick="add()" type"submit" id="btn-D" class="btn btn-success col-xs-3 col-sm-3 col-md-3 col-md-2"><span class="glyphicon glyphicon-floppy-disk"></span></button>
-      </p> 
-    </div> 
+    <br>   
     </form>
     </div>
-    </div>   
+    </div> 
+    <div id="btn-A">     
+        <button onclick="add()" type"submit" class="btn btn-success col-xs-4 col-sm-4 col-md-3"><span class="glyphicon glyphicon-floppy-disk"></span></button>
+    </div>  
     <br>
     <br>
     <script src="js/webSQL.js"></script>
