--- a/concentrado.html
+++ b/concentrado.html
@@ -14,7 +14,7 @@
   <body>
     <br>
     <div class="container">
-      <header class="navbar navbar-default navbar-fixed">
+      <header class="navbar navbar-fixed">
         <div class="navbar-header">
         <a href="concentrado.html" class="navbar-brand">MASTER KEY</a>
           <div class="input-group col-sm-2">
@@ -47,13 +47,9 @@
       </div>
     </div>
     <div class="container">
-      <footer>
-        <div id="btn-A">
-          <p>          
-           <a href="agregar.html"><button class="btn btn-primary col-xs-3 col-sm-3 col-md-3 col-md-2"><span class="glyphicon glyphicon-plus"></span></button></a>        
-          </p> 
+        <div id="btn-A">          
+           <a href="agregar.html"><button class="btn btn-primary col-xs-4 col-sm-4 col-md-3"><span class="glyphicon glyphicon-plus"></span></button></a>         
         </div>        
-      </footer>
     </div>
     <script src="js/bootstrap.min.js"></script>    
   </body>
