--- a/agregar.html
+++ b/agregar.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/key-gen.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">         
+    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>         
   </head>
   <body>
     <br>
@@ -25,13 +28,14 @@
       <form id="sendDatos">
         <div class="form-group">
             <label>Usuario:</label>
-            <input class="form-control" id="usuario" type="text" required>
+            <input class="form-control" id="usuario" type="text" required data-toggle="tooltip" data-placement="bottom" title="Pegar Ctrl+V">
         </div>
         <div class="form-group">
             <label>Sitio:</label>
-            <input class="form-control" id="sitio" type="text" placeholder="https://" required>
+            <input class="form-control" id="sitio" type="text" placeholder="https://" required data-toggle="tooltip" data-placement="bottom" title="Pegar Ctrl+V">
         </div>        
-        <div id="pass" class="form-group">
+        <div id="pass" class="form-group" data-toggle="tooltip" data-placement="bottom" title="Copiar Ctrl+C">
+        <input type="text" class="form-control" id="contraseña" value="contraseña">
           <script type="text/javascript">
             generar(12);
           </script>
@@ -48,6 +52,13 @@
     <script src="js/webSQL.js"></script>
     <script src="js/jQuery.js"></script>    
     <script src="js/bootstrap.min.js"></script>
-     
+    <script type="text/javascript" src="jquery.js"></script>
+    
+   <script>
+    $(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+    });
+    $("#contraseña").select();
+  </script>
   </body>
 </html>
