--- a/concentrado.html
+++ b/concentrado.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <title>Master Key</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bubbler+One">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">     
-    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
     <script src="js/key-gen.js"></script>
     <script src="js/webSQL.js"></script>    
-    <script src="js/jQuery.js"></script>     
+    <link rel="stylesheet" href="css/index.css">     
   </head>
   <body>
     <br>
