--- a/agregar.html
+++ b/agregar.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Master Key</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bubbler+One">
-    <script src="js/jquery.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">    
+    <link rel="stylesheet" href="css/index.css">
     <script src="js/key-gen.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
   </head>
   <body>
     <br>
@@ -47,9 +49,7 @@
     </div>  
     <br>
     <br>
-    <script src="js/webSQL.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    
+    <script src="js/webSQL.js"></script>     
    <script>
     $("#pass").click(function(){
     $("#contraseña").select();
