alinear texto a lado de la imagen

--- a/concentrado.html
+++ b/concentrado.html
@@ -17,9 +17,8 @@
       <header class="navbar navbar-fixed">
         <div class="navbar-header">
         <div class="profile">
-              <img class="avatar" style="width: 50px;border-radius:50%">
-              <h3 class="name">Username|</h3>
-              <button class="btn btn-primary btn-logout">Cerrar Sesión</button>
+              <img class="avatar" style="width:60px;border-radius:60%">
+              <B><align="left" class="name">Username</B>    
         </div>
         <script>
           $ = document.querySelector.bind(document);
